# modules/dxp/apps/osb/osb-provisioning/osb-provisioning-rest/osb-provisioning-rest-impl/rest-openapi.yaml
@@ -174,41 +174,17 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
-    "/accounts/{accountKey}/product-groups/{productGroupName}/product-version/{productVersion}/development-license-key":
+    "/accounts/{accountKey}/license-keys":
         get:
             description:
-                Downloads the account's product development license key.
-            operationId: getAccountAccountKeyProductGroupProductGroupNameProductVersionDevelopmentLicenseKey
+                Retrieves the account's license keys. Results can be paginated, filtered, searched, and sorted.
+            operationId: getAccountAccountKeyLicenseKeysPage
             parameters:
                 - in: path
                   name: accountKey
                   required: true
                   schema:
                       type: string
-                - in: path
-                  name: productGroupName
-                  required: true
-                  schema:
-                      type: string
-                - in: path
-                  name: productVersion
-                  required: true
-                  schema:
-                      type: string
-            responses:
-                200:
-                    content:
-                        application/xml:
-                            schema:
-                                format: binary
-                                type: string
-            tags: ["LicenseKey"]
-    "/license-keys":
-        get:
-            description:
-                Retrieves the license keys. Results can be paginated, filtered, searched, and sorted.
-            operationId: getLicenseKeysPage
-            parameters:
                 - in: query
                   name: filter
                   schema:
@@ -245,8 +221,14 @@ paths:
             tags: ["LicenseKey"]
         post:
             description:
-                Generates license keys.
-            operationId: postLicenseKeysPage
+                Generates license keys for an account.
+            operationId: postAccountAccountKeyLicenseKeysPage
+            parameters:
+                - in: path
+                  name: accountKey
+                  required: true
+                  schema:
+                      type: string
             requestBody:
                 content:
                     application/json:
@@ -273,6 +255,35 @@ paths:
                                 items:
                                     $ref: "#/components/schemas/LicenseKey"
                                 type: array
+            tags: ["LicenseKey"]
+    "/accounts/{accountKey}/product-groups/{productGroupName}/product-version/{productVersion}/development-license-key":
+        get:
+            description:
+                Downloads the account's product development license key.
+            operationId: getAccountAccountKeyProductGroupProductGroupNameProductVersionDevelopmentLicenseKey
+            parameters:
+                - in: path
+                  name: accountKey
+                  required: true
+                  schema:
+                      type: string
+                - in: path
+                  name: productGroupName
+                  required: true
+                  schema:
+                      type: string
+                - in: path
+                  name: productVersion
+                  required: true
+                  schema:
+                      type: string
+            responses:
+                200:
+                    content:
+                        application/xml:
+                            schema:
+                                format: binary
+                                type: string
             tags: ["LicenseKey"]
     "/license-keys/activate":
         put:
